ARROW-9380: [C++] Fix Filter crashes and bug in kernels with NullHandling::OUTPUT_NOT_NULL

A few interrelated fixes:

* The `is_null` kernel was returning a slightly malformed `ArrayData` with the null_count set to -1 even though the validity bitmap is null.
* Adds `ArrayData::MayHaveNulls` function to help with checking for the above problem
* Make filter implementation robust to the previous bullet point (no validity bitmap but atomic null count non-zero)
* Argument arity was not being checked in metafunctions, so this is now checked in a single place at `MetaFunction::Execute`

Closes #7698 from wesm/ARROW-9380

Authored-by: Wes McKinney <wesm@apache.org>
Signed-off-by: Wes McKinney <wesm@apache.org>